@@ -1,3 +1,12 @@
+2008-12-23  Per Bothner  <per@bothner.com>
+
+	* standard/module_extends.java: Move setting of module's super-type
+	from rewriteForm to scanFrom, because if it is done in rewriteForm
+	it happens too late for Compilation's addMainClass.
+
+	* standard/module_name.java (scanForm): Allow plain name
+	without angle-brackets.
+
 2008-12-09  Per Bothner  <per@bothner.com>
 
 	* repl.java (processArgs): Handle --target/-target arg.
